<resources>
    <string name="app_name">Scrollbar_1st july</string>
    <string name="age">Age</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="phone_number">Phone number</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="address">Address</string>
</resources>