<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <EditText
        android:hint="@string/name"
        style="@style/editstyle"

        />

    <EditText
        style="@style/editstyle"

        android:hint="@string/id"


        />
    <EditText
        style="@style/editstyle"

        android:hint="@string/date_of_birth"
       />
    <EditText
        style="@style/editstyle"

        android:hint="Blood Group"
        />
    <EditText
        style="@style/editstyle"

        android:hint="@string/phone_number"
       />
    <EditText
        style="@style/editstyle"

        android:hint="@string/state"

        />
    <EditText
        android:hint="@string/district"
        style="@style/editstyle"

        />
    <EditText

        android:hint="@string/address"
        style="@style/editstyle"

        />
</LinearLayout>

</ScrollView>